--- a/main.html
+++ b/main.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dog Adoption</title>
+    <style>
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-<form>
-  <label for="name">Name:</label>
-  <input type="text" id="name" placeholder="Name">
-
-  <label for="phone">Phone Number:</label>
-  <input type="text" id="phone" placeholder="Phone Number">
-
-  <label for="address">Address:</label>
-  <input type="text" id="address" placeholder="Address">
-
-  <label for="checkbox">Have you ever lived with a Dog before?</label>
-  <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
-
-  <label for="multiSelect">Please select your preferred breeds:</label>
-  <select id="multiSelect" multiple>
-    <option value="Labrador Retriever">Labrador Retriever</option>
-    <option value="German Shepherd">German Shepherd</option>
-    <option value="Golden Retriever">Golden Retriever</option>
-    <option value="Bulldog">Bulldog</option>
-    <option value="Beagle">Beagle</option>
-  </select>
-
-  <input type="submit" id="submit" value="Submit">
-</form>
+    <h1>Dog Breeds</h1>
+    <ul>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
+                <img src="GOLDEN_RETRIEVER_IMG_LINK" alt="Golden Retriever">
+            </a>
+        </li>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
+                <img src="POODLE_IMG_LINK" alt="Poodle">
+            </a>
+        </li>
+    </ul>
 </body>
-
 </html>
